[gd_scene load_steps=3 format=3 uid="uid://bnxbcnvw6ffsi"]

[ext_resource type="Script" path="res://block.gd" id="1_138s4"]
[ext_resource type="Script" path="res://Shapes/Rectangle.gd" id="2_dqvcf"]

[node name="Block" type="Node2D"]
script = ExtResource("1_138s4")

[node name="DebugRect" type="Node2D" parent="."]
script = ExtResource("2_dqvcf")
is_filled = false
width = 8.0
height = 8.0
colour = Color(0, 1, 1, 1)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4, 4)
scale = Vector2(0.5, 0.5)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
